// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Select Dark Background 1`] = `
.c1 {
  position: relative;
  width: 100%;
  color: #6D6E70;
}

.c2 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  border-radius: 40px;
  padding: 17px 20px 14px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 63px;
  cursor: pointer;
  font-style: italic;
}

.c2:focus,
.c2:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c2::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::placeholder {
  color: #252525;
  font-style: italic;
}

.c3 {
  position: absolute;
  right: 10px;
  top: 10px;
  width: 28px;
  pointer-events: none;
}

.c0 {
  padding: 30px;
  height: 100vh;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <select
        className="c2"
        defaultValue=""
        onChange={[Function]}
        selected={false}
      >
        <option
          disabled={true}
          value=""
        >
          Select something
        </option>
        <option
          value={1}
        >
          Option 1
        </option>
        <option
          value={2}
        >
          Option 2
        </option>
      </select>
      <svg
        className="c3"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Select Light Background 1`] = `
.c1 {
  position: relative;
  width: 100%;
  color: #6D6E70;
}

.c2 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  border-radius: 40px;
  padding: 17px 20px 14px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 63px;
  cursor: pointer;
  font-style: italic;
}

.c2:focus,
.c2:active {
  box-shadow: 0 0 10px rgba(135,135,135,0.8);
}

.c2::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::placeholder {
  color: #252525;
  font-style: italic;
}

.c3 {
  position: absolute;
  right: 10px;
  top: 10px;
  width: 28px;
  pointer-events: none;
}

.c0 {
  padding: 30px;
  height: 100vh;
  background-color: #F5F5F5;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <select
        className="c2"
        defaultValue=""
        onChange={[Function]}
        selected={false}
      >
        <option
          disabled={true}
          value=""
        >
          Select something
        </option>
        <option
          value={1}
        >
          Option 1
        </option>
        <option
          value={2}
        >
          Option 2
        </option>
      </select>
      <svg
        className="c3"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </div>
  </div>
</div>
`;
